force-app/main/default/objects/Cost__c/Cost__c.object-meta.xml
<CustomObject>
    <description>Object that represents a particular cost for a Marketing Activity. This information is stored and generated in the Finance System (at 15/12/2020 is Oracle) and sent to Salesforce by using the STANDARD REST API. The access is controlled by the Connected App &quot;Marketing - Finance Integration&quot;</description>
    <label>Marketing Cost</label>
    <nameField>
        <displayFormat>COST-{00000}</displayFormat>
        <label>Marketing Cost Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing Costs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>