force-app/main/default/objects/Cost__c/fields/Cost_Key__c.field-meta.xml
<CustomField>
    <fullName>Cost_Key__c</fullName>
    <externalId>true</externalId>
    <label>Cost Key</label>
    <length>60</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>