force-app/main/default/objects/Cost__c/fields/Cost_Value__c.field-meta.xml
<CustomField>
    <fullName>Cost_Value__c</fullName>
    <label>Cost Value</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>