force-app/main/default/objects/Cost__c/fields/Project_Id__c.field-meta.xml
<CustomField>
    <fullName>Project_Id__c</fullName>
    <description>Represents the project (Marketing Campaign) that the Cost belongs to in Oracle</description>
    <label>Project Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>