force-app/main/default/objects/Cost__c/fields/Task_Id__c.field-meta.xml
<CustomField>
    <fullName>Task_Id__c</fullName>
    <description>Id for the task (Marketing_Activity__c) in Oracle</description>
    <label>Task Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>